[tool.poetry]
name = "accessverifier"
version = "0.1.0"
description = ""
authors = ["Adam Obrebski <adamobrebski@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.33.0"
pylint = "^3.3.2"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]